# cleanCodeRefactor

./: .env.example  README.md  pyproject.toml
.ccr/langfuse/: schema_bundle.json
ccr/: __init__.py  cli.py  debug.py  env.py
ccr/codex/: __init__.py  provider.py  session.py
ccr/extraction/: __init__.py  clusters.py  model_limits.json  token_budget.py  tree_sitter_index.py  units.py
ccr/knowledge/: __init__.py  loaders.py  references.py  retrieval.py
ccr/langchain_utils/: __init__.py  documents.py  parsers.py
ccr/langfuse_related/: __init__.py  prompt_backups.yaml  prompts.py  sync.py
ccr/schemas/: __init__.py  judge.py  refactor.py  retrieval.py  summary.py  tests.py  unit.py
ccr/snapshots/: __init__.py  git.py  workspace.py
ccr/verification/: __init__.py  commands.py  runner.py
ccr/workflow/: __init__.py  dashboard.py  ledger.py  run.py  state.py
tests/: test_cli.py  test_codex_session.py  test_dashboard.py  test_debug_entrypoint.py  test_env.py  test_extraction.py  test_git_snapshot.py  test_langchain_utils.py  test_langfuse_integration.py  test_resume_workflow.py  test_verification_runner.py  test_workflow.py  test_workflow_formatting.py  test_workflow_options.py
