[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "clean-code-refactor"
version = "0.1.0"
description = "A copied-workspace clean-code refactoring orchestrator."
readme = "PLAN.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Clean Code Refactor Contributors" }
]
dependencies = [
  "langfuse>=3,<4",
  "pydantic>=2.8,<3",
  "Pygments>=2.18,<3",
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ccr = "ccr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ccr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
