[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "clean-code-refactor"
version = "0.1.0"
description = "A copied-workspace clean-code refactoring orchestrator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Clean Code Refactor Contributors" }
]
dependencies = [
  "langfuse>=3,<4",
  "pydantic>=2.8,<3",
  "Pygments>=2.18,<3",
  "PyYAML>=6.0,<7",
  "tiktoken>=0.7,<1",
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
langchain = [
  "langchain-core>=0.3,<2",
]

[project.scripts]
ccr = "ccr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ccr"]

[tool.hatch.build.targets.wheel.force-include]
"ccr/langfuse_related/prompt_backups.yaml" = "ccr/langfuse_related/prompt_backups.yaml"
"ccr/extraction/model_limits.json" = "ccr/extraction/model_limits.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
